[package]
name = "hostlevelmoduled"
version = "0.1.0"
authors = ["hugues"]
publish = false
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
tokio =  { version = "1.0", features = ["full"] }
url = { version = "2", features = ["serde"] }
futures =  { version = "0.3", features = ["compat"] }

aziot-identity-common = { git = "https://github.com/Azure/iot-identity-service", branch = "main" }
aziot-identity-common-http = { git = "https://github.com/Azure/iot-identity-service", branch = "main" }
aziot-cert-common-http = { git = "https://github.com/Azure/iot-identity-service", branch = "main" }
aziot-key-common = { git = "https://github.com/Azure/iot-identity-service", branch = "main" }

azure-iot-mqtt = { path = "../azure-iot-mqtt" }
identity-client = { path = "../identity-client" }
identity-client-wait =  { path = "../identity-client-wait" } 
mqtt3 = { path = "../mqtt3" }
